--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/plugins/browser/components/page-structure/components/_StructureTree.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/plugins/browser/components/page-structure/components/_StructureTree.scss
@@ -53,6 +53,7 @@ html#{$cadmin-selector} {
 
 					&__node {
 						flex-grow: 1;
+						flex-shrink: 0;
 
 						&:first-child {
 							padding-left: 16px;
